# rl-lightning

./: .coveragerc  .dockerignore  .gitignore  .markdownlint.json  .pylintrc  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
configs/: exp.yaml  wgangp-cifar10.yaml
configs/callbacks/: default-tsne.yaml  tsne.yaml  tune_report.yaml
configs/datamodule/: amazon.yaml  cifar-10.yaml  cora-nodedata-attack.yaml  cora-nodedata-gin.yaml  cora-nodedata.yaml  cora.yaml  enzymes.yaml  gnnbenchmark.yaml  grid.yaml  imdb.yaml  louvain-split-citeseer.yaml  louvain-split-cora.yaml  louvain-split-imdb.yaml  louvain-split-reddit.yaml  louvain-split.yaml  mnist-test.yaml  mnist.yaml  nodedata-imdb.yaml  nodedata.yaml  planetoid.yaml  proteins.yaml  reddit-nodedata.yaml  tudataset.yaml
configs/extras/: gin.yaml
configs/inputs/: test.yaml
configs/logger/: default.yaml  dvc-logger.yaml  many_loggers.yaml  test.yaml
configs/model/: gbt.yaml  mnist-classifier.yaml  wgangp.yaml
configs/trainer/: auto.yaml  default.yaml
docker/python-310/: Dockerfile
experiments/: README.md  main.py
scripts/: dev.sh  entrypoint.sh  install-pyg.sh  install-python.sh  pytest.sh  setup-pyenv.sh
src/rl/: run.py
src/rl/agent/: agent.py
src/rl/buffer/: __init__.py  const.py  replay_buffer.py
src/rl/callbacks/: __init__.py  _base.py  freeze.py  hydra.py  nan.py  privacy.py  utils.py
src/rl/callbacks/visualization/: __init__.py  normgrad.py  wnb.py
src/rl/config/: config.py
src/rl/config/default/: data.yaml  model.yaml  trainer.yaml  training.yaml
src/rl/datasets/: __init__.py  datamodule.py  dataset.py
src/rl/losses/: __init__.py  dqn_loss.py
src/rl/models/: __init__.py  _base.py  _const.py  dqn.py
src/rl/models/gbt/: core.py  nn.py  utils.py
src/rl/nn/: __init__.py  _base.py  dqn.py  mlp.py
src/rl/options/: __init__.py  cli.py
src/rl/pipeline/: __init__.py  pipeline.py  ray.py  runner.py  utils.py
src/rl/privacy/: __init__.py  optimizers.py  utils.py
src/rl/resolvers/: __init__.py  data_name.py  datamodule.py  decorator.py  model.py
src/rl/transforms/: __init__.py  homo.py  relabel_nodes.py  remove_edges.py
src/rl/utils/: __init__.py  classes.py  cuda.py  data.py  err_msg.py  fun.py  helpers.py  mem.py  models.py  tb_api.py  utils.py  vis.py
test/: conftest.py  helpers.py
test/models/: test_gbt.py
